--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -650,7 +650,7 @@ button:focus {
 /*Title Css*/
 .heading_s1,
 .heading_s4 {
-	margin-bottom: 20px;
+	margin-bottom: 5px;
 }
 .heading_s1 h1, .heading_s1 h2, .heading_s1 h3, .heading_s1 h4, .heading_s1 h5, .heading_s1 h6 {
 	font-weight: 700;
@@ -2002,7 +2002,7 @@ input.text {
 .banner_section:not(.full_screen) .carousel-item, 
 .banner_section:not(.full_screen) .banner_content_wrap, 
 .banner_section:not(.full_screen) .banner_content_wrap .carousel-item {
-	height: 700px;
+	height: 450px;
 }
 .full_screen, .full_screen .carousel-item {
 	height: 100vh;
@@ -2012,7 +2012,7 @@ input.text {
 .banner_section.slide_medium .carousel-item, 
 .banner_section.slide_medium .banner_content_wrap, 
 .banner_section.slide_medium .banner_content_wrap .carousel-item {
-	height: 500px;
+	height: 400px;
 }
 .banner_section .banner_slide_content {
 	left: 0;
@@ -2178,9 +2178,9 @@ input.text {
 	padding: 100px 0;
 }
 .banner_content h2 {
-	font-size: 60px;
+	font-size: 30px;
 	margin-bottom: 20px;
-	font-weight: 600;
+	font-weight: 400;
 	text-transform: capitalize;
 }
 .banner_content p {
@@ -4239,7 +4239,7 @@ footer .widget_title {
 	font-weight: 600;
 }
 .team_single_info {
-	text-align: center;
+	text-align: left;
 	padding: 15px;
 	background-color: #f7f7f7;
 }
@@ -4257,7 +4257,7 @@ footer .widget_title {
   19. START BREADCRUMB STYLE
 *===================================*/
 .breadcrumb_section {
-	padding: 70px 0;
+	padding: 50px 0;
 	width: 100%;
 }
 .breadcrumb_section.page-title-mini {
@@ -4270,7 +4270,7 @@ footer .widget_title {
 	font-size: 14px;
 }
 .header_wrap.transparent_header  + .breadcrumb_section {
-	padding-top: 200px;
+	padding-top: 140px;
 }
 .header_wrap.transparent_header.header_with_topbar + .breadcrumb_section {
 	padding-top: 250px;
@@ -7003,200 +7003,3 @@ blockquote p {
 /*===================================*
   28. END ELEMENT DESIGN
 *===================================*/
-
-/*Demo Switcher Css*/
-.demo_switcher {
-	position: fixed;
-	right: 0;
-	z-index: 9999;
-	top: 20%;
-}
-.demo > ul > li > a {
-	font-size: 22px;
-	text-align: center;
-	display: block;
-	width: 40px;
-	height: 40px;
-	line-height: 40px;
-	color: #fff;
-	transition: all 0.5s ease-in-out;
-}
-.demo > ul > li > a.menu_icon {
-	line-height: 44px;
-	font-size: 25px;
-}
-.bg-green {
-	background-color: #73e080;
-}
-.bg-red {
-	background-color: #f94551;
-}
-.demo_list ul {
-	list-style: none;
-	display: inline-block;
-}
-.demo_list {
-	background-color: #fff;
-	position: fixed;
-	right: -360px;;
-	max-width: 360px;
-	padding: 5px;
-	overflow: auto;
-	top: 0;
-	bottom: 0;
-	transition: all 0.5s ease-in-out;
-	z-index: 9999;
-}
-.demo_list.switch-active {
-	right: 0;
-}
-.demo_list li {
-	float: left;
-	 width: 50%;
-	 padding: 5px;
-}
-.demo_list li a {
-	display: block;
-	border: 1px solid #ddd;
-	padding: 4px;
-	position: relative;
-}
-.demo_list li a::before {
-	content: "";
-	position: absolute;
-	left: 4px;
-	top: 4px;
-	bottom: 4px;
-	right: 4px;
-	opacity: 0;
-	background-color: rgba(0,0,0,0.6);
-	z-index: 9;
-	transition: all 0.5s ease-in-out;
-}
-.demo_list li a:hover:before {
-	opacity: 1;
-}
-body.switch-open {
-	overflow: hidden;
-	padding-right: 15px;
-}
-.switch-open::before {
-	content: "";
-	position: fixed;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	top: 0;
-	background-color: rgba(0,0,0,0.8);
-	z-index: 9999;
-}
-.demo li {
-	position: relative;
-}
-.demo > ul > li > a.demo_icon.switch-active {
-	position: relative;
-	transition: all 0.5s ease-in-out;
-	-moz-transform: translateX(-360px);
-	-webkit-transform: translateX(-360px);
-	transform: translateX(-360px);
-}
-.demo > ul > li > a.demo_icon.switch-active i::before {
-	content: "\f129";
-	font-size: 20px;
-	vertical-align: middle;
-}
-.demo > ul > li > a.menu_icon.switch-active {
-	line-height: 36px;
-}
-.demo_list h5 {
-	margin: 10px 0;
-}
-.demo li.switch-active .color_icon {
-	transition: all 0.5s ease-in-out;
-	-moz-transform: translateX(-200px);
-	-webkit-transform: translateX(-200px);
-	transform: translateX(-200px);
-}
-.color-switch {
-	background: #212121;
-	right: -200px;
-	padding: 10px;
-	position: absolute;
-	top: 0;
-	transition: all .5s ease-in-out;;
-	width: 200px;
-	z-index: 999;
-}
-.switch-active {
-	right: 0;
-}
-.color-switch button::after {
-	color: #ffffff;
-	content: "\f122";
-	font-family: "Ionicons";
-	font-size: 18px;
-	left: 5px;
-	opacity: 0;
-	position: absolute;
-	top: 2px;
-}
-.color-switch button.active::after {
-	opacity: 1;
-}
-.color-switch button {
-	border: 0 none;
-	border-radius: 3px;
-	cursor: pointer;
-	height: 25px;
-	line-height: 20px;
-	margin: 2px;
-	padding: 0;
-	position: relative;
-	text-align: center;
-	width: 25px;
-}
-.green {
-	background-color: #1c9d67;
-}
-.orange {
-	background-color: #FF7200;
-}
-.red {
-	background-color: #FF324D;
-}
-.yellow {
-	background-color: #FFBB00;
-}
-.blue {
-	background-color: #4382FF;
-}
-.demo_list li a span {
-	position: absolute;
-	left: 0;
-	right: 0;
-	color: #fff;
-	z-index: 9;
-	top: 50%;
-	-moz-transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);
-	transform: translateY(-50%);
-	text-shadow: 0 0 4px rgba(0,0,0,0.8);
-	opacity: 0;
-	padding: 0 10px;
-	transition: all 0.5s ease-in-out;
-}
-.demo_list li a:hover span {
-    opacity: 1;
-}
-@media only screen and (max-width: 480px) {
-.demo_list {
-	right: -270px;
-	max-width: 270px;
-}
-.demo > ul > li > a.demo_icon.switch-active {
-	-moz-transform: translateX(-270px);
-	-webkit-transform: translateX(-270px);
-	transform: translateX(-270px);
-}
-
-}
